v4.3
bug fixing and matric controller
